Fix #39 set masthead position relative if unstuck

--- a/catch-base-pro/style.css
+++ b/catch-base-pro/style.css
@@ -580,6 +580,7 @@ ul#menu-main-menu {
 }
 
 #masthead {
+    position: relative;
     line-height: 0;
     width: 100%;
     background: #FFF;
@@ -909,8 +910,8 @@ textarea {
     /* width: 100%; */
 }
 
-.stuck {
-    position: fixed;
+#masthead.stuck {
+    position: fixed !important;
     top: 0px;
 }
 
